Add forced report controller and report-block search filter. (#156)
